@@ -1,3 +1,15 @@
+2006-09-24  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* src/ephy-window.c: (ephy_window_constructor):
+	* src/ephy-lockdown.c: (update_window):
+	* src/window-commands.c: (window_cmd_file_new_window), (window_cmd_file_new_tab):
+	* src/window-commands.h: (window_cmd_file_new_window), (window_cmd_file_new_tab):
+	* src/ephy-toolbar.c: (ephy_toolbar_set_window):
+	* src/ephy-home-action.c: (ephy_home_action_activate):
+
+	Add middle-click on New Tab/Window button to open URL on clipboard. Fix bug 149715.
+	Both New Tab and New Window actions are now EphyHomeAction.
+
 2006-09-23  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/GtkNSSClientAuthDialogs.h:
